--- a/www/style/1/www/main.css
+++ b/www/style/1/www/main.css
@@ -768,17 +768,17 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       10);
+		                                                        10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       0);
+		                                                        0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1327,9 +1327,9 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       25);
+		                                                        25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1720,11 +1720,11 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :                                 
+	filter: progid :                                  
 		                                                        
 		                           
 		                           
-		                    DXImageTransform.Microsoft.AlphaImageLoader ( 
+		                     DXImageTransform.Microsoft.AlphaImageLoader (  
 		      
 		              
 		 
@@ -1738,7 +1738,7 @@ p#clear {
 		 
 		    
 		                                                                   
-		             src =                
+		              src =                 
 		
 		 
 		   
@@ -1749,8 +1749,8 @@ p#clear {
 		                      
 		                      
 		                      
-		              '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =        
+		               '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =         
 		 
 		   
 		                
@@ -1763,7 +1763,7 @@ p#clear {
 		 
 		   
 		                                                               
-		                   'scale' );
+		                    'scale' );
 }
 
 .yui-picker-mask {
@@ -1938,9 +1938,9 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       25);
+		                                                        25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2045,9 +2045,9 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       12);
+		                                                        12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2152,9 +2152,9 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       12);
+		                                                        12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2216,9 +2216,9 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       0);
+		                                                        0);
 }
 
 .yui-dt-resizerproxy {
@@ -2227,9 +2227,9 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       0);
+		                                                        0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2325,9 +2325,9 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       25);
+		                                                        25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2714,17 +2714,17 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       50);
+		                                                        50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       50);
+		                                                        50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2822,9 +2822,9 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       50);
+		                                                        50);
 }
 
 .yui-editor-container iframe {
@@ -3925,9 +3925,9 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       50);
+		                                                        50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4694,9 +4694,9 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       12);
+		                                                        12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5207,16 +5207,16 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       0);
+		                                                        0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       50);
+		                                                        50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5304,9 +5304,9 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                                                    
+	filter: alpha(opacity =                                                     
 		                                                         
-		                                                        100);
+		                                                         100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5562,17 +5562,17 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       50);
+		                                                        50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       50);
+		                                                        50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5670,9 +5670,9 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                                                     
+	filter: alpha(opacity =                                                      
 		                                                         
-		                                                       50);
+		                                                        50);
 }
 
 .yui-editor-container iframe {
@@ -7726,10 +7726,10 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :                       
+	filter: progid :                        
 		                                                        
 		                                   
-		                      DXImageTransform.Microsoft.gradient (      
+		                       DXImageTransform.Microsoft.gradient (       
 		                  
 		
 		 
@@ -7737,20 +7737,20 @@ a#asignup {
 		        
 		                 
 		                                                         
-		         startColorstr =            
+		          startColorstr =             
 		 
 		   
 		      
 		              
 		                            
-		                                            "#0000FF", endColorstr =
+		                                             "#0000FF", endColorstr = 
 		  
 		      
 		            
 		                          
 		 
 		      
-		                                                      "#19558D" );
+		                                                       "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8322,10 +8322,10 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :          
+	filter: progid :           
 		                                                        
 		                                   
-		         DXImageTransform.Microsoft.gradient (            
+		          DXImageTransform.Microsoft.gradient (             
 		
 		 
 		    
@@ -8333,19 +8333,20 @@ li.tsearch {
 		                 
 		  
 		       
-		                                                      startColorstr = 
+		                                                       startColorstr =
+		 
 		   
 		      
 		              
 		                            
-		                                                        "#A7BBCC",
-		endColorstr =          
+		                                                         "#A7BBCC",
+		endColorstr =           
 		 
 		   
 		       
 		              
 		                             
-		                                           "#879BAD" );
+		                                            "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -9734,6 +9735,10 @@ div.com_like a,a.c_like {
 
 .w90 {
 	width: 90%;
+}
+
+.w100 {
+	width: 100%;
 }
 
 .mb10 {
